--- a/pom.xml
+++ b/pom.xml
@@ -3,19 +3,19 @@
 
     <name>Mikromedia DM 4 Sendgrid</name>
     <groupId>de.mikromedia</groupId>
-    <artifactId>dm48-sendgrid</artifactId>
-    <version>1.0.1</version>
+    <artifactId>dm49-sendgrid</artifactId>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
         <artifactId>deepamehta-plugin</artifactId>
-        <version>4.8.2</version>
+        <version>4.9.1</version>
     </parent>
 
-    <!--properties>
-        <dm4.deploy.dir>/home/malted/source/mikro/deepamehta/bundle-deploy</dm4.deploy.dir>
-    </properties-->
+    <properties>
+        <!--dm4.deploy.dir>/home/malted/source/mikro/deepamehta/bundle-deploy</dm4.deploy.dir-->
+    </properties>
 
     <build>
         <plugins>
