--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns:pom="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>DeepaMehta 4 Sendgrid</name>
+    <name>Mikromedia DM 4 - Sendgrid API</name>
     <groupId>de.mikromedia</groupId>
-    <artifactId>dm48-sendgrid</artifactId>
-    <version>1.0</version>
+    <artifactId>dm49-sendgrid</artifactId>
+    <version>1.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
         <groupId>de.deepamehta</groupId>
         <artifactId>deepamehta-plugin</artifactId>
-        <version>4.8.2</version>
+        <version>4.9.1</version>
     </parent>
 
     <!--properties>
