--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>Mikromedia DM 4 - Sendgrid API</name>
     <groupId>de.mikromedia</groupId>
     <artifactId>dm49-sendgrid</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>bundle</packaging>
 
     <parent>
