--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -1,7 +1,18 @@
-dm4.plugin.main_package=de.mikromedia.sendgrid
-dm4.plugin.activate_after=de.deepamehta.webclient
-dm4.plugin.model_version=0
-dm4.sendgrid.system_mailbox=mail@domain.tld
-dm4.sendgrid.from_mailbox=mailte@domain.tld
-dm4.sendgrid.from_name=System Mail
-dm4.sendgrid.api_key=XYZ
+dm4.plugin.main_package = systems.dmx.sendmail
+dm4.plugin.model_version = 0
+
+// Plugin Configuration
+dmx.sendmail.system_mailbox = your@domain.tld
+dmx.sendmail.system_from_mailbox = no-reply@domain.tld
+dmx.sendmail.system_from_name = Your System Name
+dmx.sendmail.type = smtp | sendgrid
+
+// SMTP Configuration
+dmx.sendmail.smtp_host = localhost | ip/hostname
+dmx.sendmail.smtp_username = empty |\u00a0username
+dmx.sendmail.smtp_password = empty |\u00a0password
+dmx.sendmail.smtp_port = empty\u00a0|\u00a0port
+dmx.sendmail.smtp_security = empty |\u00a0tls |\u00a0smtps
+
+// Sendgrid Configuration
+dmx.sendmail.sendgrid_api_key = empty
