Configure for STMP test run on localhost (#3)

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -5,10 +5,10 @@ dm4.plugin.model_version = 0
 dmx.sendmail.system_mailbox = your@domain.tld
 dmx.sendmail.system_from_mailbox = no-reply@domain.tld
 dmx.sendmail.system_from_name = Your System Name
-dmx.sendmail.type = smtp | sendgrid
+dmx.sendmail.type = smtp
 
 // SMTP Configuration
-dmx.sendmail.smtp_host = localhost | ip/hostname
+dmx.sendmail.smtp_host = localhost
 dmx.sendmail.smtp_username = empty |\u00a0username
 dmx.sendmail.smtp_password = empty |\u00a0password
 dmx.sendmail.smtp_port = empty\u00a0|\u00a0port
