Fixes 'system_admin_mailbox' config option key name (#2)

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -2,17 +2,17 @@ dm4.plugin.main_package = systems.dmx.sendmail
 dm4.plugin.model_version = 0
 
 // Plugin Configuration
-dmx.sendmail.system_mailbox = your@domain.tld
-dmx.sendmail.system_from_mailbox = no-reply@domain.tld
-dmx.sendmail.system_from_name = Your System Name
+dmx.sendmail.system_admin_mailbox = admin@domain.tld
+dmx.sendmail.system_from_mailbox = sender@domain.tld
+dmx.sendmail.system_from_name = Mr. Sender
 dmx.sendmail.type = smtp
 
 // SMTP Configuration
 dmx.sendmail.smtp_host = localhost
-dmx.sendmail.smtp_username = empty |\u00a0username
-dmx.sendmail.smtp_password = empty |\u00a0password
-dmx.sendmail.smtp_port = empty\u00a0|\u00a0port
-dmx.sendmail.smtp_security = empty |\u00a0tls |\u00a0smtps
+dmx.sendmail.smtp_username = username
+dmx.sendmail.smtp_password = password
+dmx.sendmail.smtp_port = empty, port
+dmx.sendmail.smtp_security = empty, tls, ssl
 
 // Sendgrid Configuration
 dmx.sendmail.sendgrid_api_key = empty
