--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>DMX Sendmail</name>
     <groupId>systems.dmx</groupId>
     <artifactId>dmx-sendmail</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
+    <version>2.0.1</version>
     <packaging>bundle</packaging>
 
     <parent>
