--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>DMX Sendmail</name>
     <groupId>systems.dmx</groupId>
     <artifactId>dmx-sendmail</artifactId>
-    <version>2.0.2</version>
+    <version>2.0.3-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <parent>
@@ -27,12 +27,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
-            <version>1.3.2</version>
+            <version>1.5</version>
         </dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.7.2</version>
+            <version>1.14.3</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -50,7 +50,7 @@
                     <instructions>
                         <Embed-Dependency>jsoup,mail,commons-email</Embed-Dependency>
                         <Import-Package>
-                            sun.security.util;resolution:=optional,*
+                            !javax.annotation.meta.*;sun.security.util;resolution:=optional,*
                         </Import-Package>
                         <Bundle-SymbolicName>
                             systems.dmx.sendmail
