--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
         <version>5.2</version>
     </parent>
 
+    <properties>
+        <dmx.deploy.dir>./deploy/instance/dev/bundle-deploy</dmx.deploy.dir>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>javax.mail</groupId>
