--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,49 @@
+stages:
+  - build
+  - test
+  - deploy
+  - install
+
 # 1) Build every commit on every branch and add the COMMIT SHORT SHA as suffix
 maven-build:
   stage: build
+  tags:
+    - shell
   script:
     - export MAVEN_OPTS='-Xmx128m'
-    - mvn clean install
+    - mvn clean install -DskipTests=true
   artifacts:
     paths:
-      - target/*.jar
+      - target
     name: ${CI_PROJECT_NAME}-${CI_COMMIT_SHORT_SHA}
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_BRANCH == 'main'
+    - if: $CI_COMMIT_TAG != null
 
-# 2) Copies SNAPSHOT builds on 'master' and 'dm4' branch into download.dmx.systems/ci/ directory
+# 2) Run SonarQube Tests
+sonarqube-check:
+  stage: test
+  tags:
+    - shell
+  dependencies:
+    - maven-build
+  variables:
+    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
+    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+  cache:
+    key: "${CI_JOB_NAME}"
+    paths:
+      - .sonar/cache
+  script:
+    - mvn -Pcoverage verify sonar:sonar -Dsonar.host.url=https://sonar.dmx.systems -Dsonar.projectKey=${CI_PROJECT_NAMESPACE}_${CI_PROJECT_NAME}_${SONAR_PROJECT_KEY}
+  allow_failure: true
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_BRANCH == 'main'
+    - if: $CI_COMMIT_TAG != null
+
+# 3) Copies SNAPSHOT builds on 'main' and 'dm4' branch into download.dmx.systems/ci/ directory
 copy-to-ci:
   stage: deploy
   script:
@@ -25,9 +59,10 @@ copy-to-ci:
     - maven-build
   only:
     - master
+    - main
     - dm4
 
-# 3) Copies tagged RELEASE builds into download.dmx.systems/plugins/ directory
+# 4) Copies tagged RELEASE builds into download.dmx.systems/plugins/ directory
 copy-to-release:
   stage: deploy
   script:
@@ -40,3 +75,34 @@ copy-to-release:
     - maven-build
   only:
     - tags
+
+# 5) Deploy into gitlab maven repository
+deploy-to-gitlab-maven:
+  stage: deploy
+  tags:
+    - shell
+  #image: maven:3.6-jdk-11
+  script:
+    - 'mvn -Pgitlab-maven-deployment deploy -s ci_settings.xml'
+  only:
+    - master
+    - main
+    - dm4
+  allow_failure: true
+
+# 6) Install in docker-container
+install-in-container:
+  stage: install
+  tags:
+    ## requires shell-docker runner
+    - shell-docker
+  dependencies:
+    - maven-build
+  script:
+    - deploy/ci-deploy-docker-instances.sh
+  #after_script:
+  #  - docker compose --env-file "${ENV_FILE}" --file deploy/docker-compose.${TIER}-ci.yaml down -v --remove-orphans || true
+  #  - docker image rm ${CI_PROJECT_NAME}_${CI_COMMIT_REF_SLUG}-ldap || true
+  rules:
+    - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
+    - if: $CI_COMMIT_BRANCH == 'main' && $CI_COMMIT_TAG == null
