fix container dependency

--- a/deploy/docker-compose.dev-ci.yaml
+++ b/deploy/docker-compose.dev-ci.yaml
@@ -21,7 +21,7 @@ services:
       - ./dmx/dev-ci/plugins:/opt/dmx/plugins:ro
       - ./dmx/dev-ci/conf.d:/opt/dmx/conf.d:ro
     depends_on:
-      - ldap
+      - mailhog
 
   mailhog:
     container_name: "${DEPLOY_PREFIX}-mailhog-container"
