--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,6 +100,7 @@ install-in-container:
     - maven-build
   script:
     - deploy/ci-deploy-docker-instances.sh
+    - deploy/ci-deploy-mail-test.sh
   #after_script:
   #  - docker compose --env-file "${ENV_FILE}" --file deploy/docker-compose.${TIER}-ci.yaml down -v --remove-orphans || true
   #  - docker image rm ${CI_PROJECT_NAME}_${CI_COMMIT_REF_SLUG}-ldap || true
