wip - update deployment

--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,22 @@
     <parent>
         <groupId>systems.dmx</groupId>
         <artifactId>dmx-plugin</artifactId>
-        <version>5.2</version>
+        <version>5.3.5-SNAPSHOT</version>
     </parent>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <dagger.version>2.48.1</dagger.version>
+        <dmx.version>5.3.5-SNAPSHOT</dmx.version>
+        <dmx-sign-up.version>3.2.0-SNAPSHOT</dmx-sign-up.version>
+        <maven-bundle-plugin.version>4.1.0</maven-bundle-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <mockito.version>4.11.0</mockito.version>
+        <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
+        <sonar-maven-plugin.version>3.10.0.2594</sonar-maven-plugin.version>
+        <junit-jupiter.version>5.9.2</junit-jupiter.version>
+    </properties>
 
     <profiles>
         <profile>
@@ -28,23 +42,41 @@
             </properties>
         </profile>
         <profile>
-            <id>gitlab-maven-deployment</id>
-            <repositories>
-                <repository>
-                    <id>gitlab-maven</id>
-                    <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
-                </repository>
-            </repositories>
-            <distributionManagement>
-                <repository>
-                    <id>gitlab-maven</id>
-                    <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
-                </repository>
-                <snapshotRepository>
-                    <id>gitlab-maven</id>
-                    <url>${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/maven</url>
-                </snapshotRepository>
-            </distributionManagement>
+            <id>coverage</id>
+            <properties>
+                <sonar.sources>src/main/java,src/main/resources-static/script</sonar.sources>
+                <sonar.tests>src/test/java,src/test/js</sonar.tests>
+                <sonar.javascript.lcov.reportPaths>coverage/lcov.info</sonar.javascript.lcov.reportPaths>
+            </properties>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jacoco</groupId>
+                        <artifactId>jacoco-maven-plugin</artifactId>
+                        <version>${jacoco-maven-plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>prepare-agent</id>
+                                <goals>
+                                    <goal>prepare-agent</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>report</id>
+                                <goals>
+                                    <goal>report</goal>
+                                </goals>
+                                <configuration>
+                                    <formats>
+                                        <format>HTML</format>
+                                        <format>XML</format>
+                                    </formats>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 
