--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <dagger.version>2.48.1</dagger.version>
         <dmx.version>5.3.5-SNAPSHOT</dmx.version>
-        <dmx-sign-up.version>3.2.0-SNAPSHOT</dmx-sign-up.version>
         <maven-bundle-plugin.version>4.1.0</maven-bundle-plugin.version>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
         <mockito.version>4.11.0</mockito.version>
@@ -44,7 +43,7 @@
         <profile>
             <id>coverage</id>
             <properties>
-                <sonar.sources>src/main/java,src/main/resources-static/script</sonar.sources>
+                <!-- <sonar.sources>src/main/java,src/main/resources-static/script</sonar.sources> -->
                 <sonar.tests>src/test/java,src/test/js</sonar.tests>
                 <sonar.javascript.lcov.reportPaths>coverage/lcov.info</sonar.javascript.lcov.reportPaths>
             </properties>
