--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
             <id>coverage</id>
             <properties>
                 <!-- <sonar.sources>src/main/java,src/main/resources-static/script</sonar.sources> -->
-                <sonar.tests>src/test/java,src/test/js</sonar.tests>
+                <!-- <sonar.tests>src/test/java,src/test/js</sonar.tests> -->
                 <sonar.javascript.lcov.reportPaths>coverage/lcov.info</sonar.javascript.lcov.reportPaths>
             </properties>
             <build>
