CI: fix env for ${TIER}

--- a/deploy/docker-compose.dev-ci.yaml
+++ b/deploy/docker-compose.dev-ci.yaml
@@ -11,6 +11,7 @@ services:
       USER_ID: "${user_id}"
       GROUP_ID: "${group_id}"
       DMX_ADMIN_PASSWORD: "${DMX_ADMIN_PASSWORD}"
+      TIER: "${TIER}"
       #LDAP_ADMIN_PASSWORD: "${LDAP_ADMIN_PASSWORD}"
     volumes:
       - ./instance/dev-ci/conf:/opt/dmx/conf
