POM: bump DMX platform dep to 5.3.5

--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
     <parent>
         <groupId>systems.dmx</groupId>
         <artifactId>dmx-plugin</artifactId>
-        <version>5.3.5-SNAPSHOT</version>
+        <version>5.3.5</version>
     </parent>
 
     <properties>
-        <dmx.version>5.3.5-SNAPSHOT</dmx.version>
+        <dmx.version>5.3.5</dmx.version>
     </properties>
 
     <profiles>
